overflow resolved

--- a/stol.css
+++ b/stol.css
@@ -15,7 +15,8 @@ html {
 
 body {
     background: linear-gradient(90deg, rgba(57, 10, 113, 1) 0%, rgba(22, 17, 65, 1) 35%, rgba(49, 5, 54, 1) 100%);
-    width: fit-content;
+    width: auto;
+    overflow-x: hidden;
 }
 
 /* Navigation Styles */
